<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gnews_background">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/gnews_logo_home"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_prefered_language"
            android:textSize="24sp"
            android:gravity="center"
            android:textAlignment="gravity"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/select_language"
                android:layout_marginTop="40dp"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/indonesia"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/indonesia"/>

                <RadioButton
                    android:id="@+id/english"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english"/>
            </RadioGroup>
        </RelativeLayout>

        <TextView
            android:layout_marginTop="40dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="gravity"
            android:text="@string/set_prefered_language_desc"/>

    </LinearLayout>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/default_button_selector"
        android:text="@string/save"
        android:layout_marginBottom="24dp"
        android:textColor="@color/white"
        />


</RelativeLayout>