<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gnews_background">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/gnews_logo_home"/>

    <ScrollView
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo">

        <LinearLayout
            android:id="@+id/popular"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="fill_parent"
                android:layout_height="180dp"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:background="@drawable/bt_placeholder" >

                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_bt_popular"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:textAlignment="gravity"
                    android:text="@string/popular_news"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:gravity="center"
                    android:textAlignment="gravity"
                    android:text="@string/popular_news_desc"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/keyword"
                android:layout_marginTop="20dp"
                android:layout_width="fill_parent"
                android:layout_height="180dp"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:background="@drawable/bt_placeholder" >

                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_bt_add"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:textAlignment="gravity"
                    android:text="@string/your_own_news"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:gravity="center"
                    android:textAlignment="gravity"
                    android:text="@string/your_own_news_desc"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>